--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,24 @@ a {
 ::-webkit-scrollbar {
   width: 0px;
 }
+
+.track {
+  white-space: nowrap;
+  will-change: transform;
+  animation: marquee 30s linear infinite;
+}
+.track:hover {
+  animation-play-state: paused;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(-50%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
