--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,11 @@ body,
   box-sizing: border-box;
 }
 
+body {
+  min-width: 100vw;
+  min-height: 100%;
+}
+
 a {
   color: inherit;
   text-decoration: none;
